# auru-relm

./: Cargo.toml  icons.toml
src/: main.rs
